--- a/css/header.css
+++ b/css/header.css
@@ -12,13 +12,22 @@
 }
 
 .logo{
-   height: 40px;
-   width: 70px;
+    font-size: 1.5em;
+    font-weight: bolder;
+    color: black;
+    text-decoration: none;
+    padding: 5px;
+    transition: 0.5s;
 }
 
-.logo img{
-    width: 100%;
+.logo:hover{
+    border-radius: 15px;
+    background-color: transparent;
+    border: 1px solid rgb(228, 228, 54);
+    cursor: pointer;
+    transform: scale(1.1);
 }
+
 
 .nav-list{
     display: flex;
