--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,13 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    height: 16556px;
     gap: 50px;
 }
 
 .card-pokemon{
     background-color: white;
+    border: 6px solid rgb(250, 250, 127);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -16,6 +18,13 @@
     justify-content: center;
     border-radius: 15px;
     box-shadow: 5px 5px 10px black;
+    animation: backInRight;
+    animation-duration: 3s;
+}
+
+.card-pokemon:hover{
+    cursor: pointer;
+   
 }
 
 .container-image{
