--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 16556px;
     gap: 50px;
 }
 
@@ -22,11 +21,6 @@
     animation-duration: 3s;
 }
 
-.card-pokemon:hover{
-    cursor: pointer;
-   
-}
-
 .container-image{
     height: 200px;
     width: 200px;
@@ -41,6 +35,7 @@
 }
 
 .topics-informations-pokemon{
+    border: 2px solid transparent;
     font-weight: bold;
     margin-top: 15px;
     border-radius: 15px;
@@ -49,4 +44,11 @@
     width: 100%;
     padding: 5px;
     text-transform: uppercase;
+    transition: 0.5s;
+}
+
+.topics-informations-pokemon:hover{
+    cursor: pointer;
+    background-color: tomato;
+    border-color: rgb(250, 250, 127);
 }
