--- a/css/reset.css
+++ b/css/reset.css
@@ -11,7 +11,7 @@ ul,li,ol{
 }
 
 body{
-    background-color: tomato;
+    background-color: #8B57FF;
     overflow-x: hidden;
     height: 16556px;
 }
