--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,10 @@
 .footer{
     margin-top: 50px;
-    background-color: rgb(211, 63, 37);
+    background-color: #753BF5;
     box-shadow: 0px 0px 20px black;
     height: 120px;
     width: 100%;
+    color: #F5E83B;
 }
 
 .flex-footer{
@@ -20,7 +21,7 @@
 }
 
 .footer a{
-    color: black;
+    color: #F5E83B;
     text-decoration: none;
     transition: 0.5s;
     border: 1px solid transparent;
