--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header{
     height: 120px;
     width: 100%;
-    background-color: rgb(211, 63, 37);
+    background-color: #753BF5;
     box-shadow: 0px 0px 20px black;
 }
 
@@ -15,6 +15,7 @@
     font-size: 6em;
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
-    color: rgb(228, 228, 54);
+    text-shadow: 2px 2px 10px black;
+    color: #F5E83B;
 }
 
