--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,5 @@
 
 .topics-informations-pokemon:hover{
     cursor: pointer;
-    background-color: tomato;
-    border-color: rgb(250, 250, 127);
+    background-color: #753BF5;
 }
