--- a/css/header.css
+++ b/css/header.css
@@ -8,14 +8,31 @@
 .flex-header{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .flex-header > h1{
-    font-size: 6em;
+    font-size: 4.5em;
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
     text-shadow: 2px 2px 10px black;
     color: #F5E83B;
+}
+
+#input-search{
+    outline: none;
+    border-radius: 15px;
+    border: none;
+    height: 35px;
+    width: 280px;
+    font-size: 1.1em;
+    text-indent: 20px;
+    box-shadow: 5px 5px 15px #F5E83B;
+}
+
+#input-search::placeholder{
+    text-decoration: double;
+    font-size: 0.8em;
+    font-weight: bold;
 }
 
