--- a/css/header.css
+++ b/css/header.css
@@ -36,3 +36,16 @@
     font-weight: bold;
 }
 
+.nav-list{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    list-style: none;
+
+}
+
+.container-icon{
+   display: block;
+}
+
+
