--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,7 @@
         display: none;
     }
     .container-icon{
+        display: block;
         background-color: white;
         border-radius: 20px;
         height: 40px;
